tests/ui/errors/snapshots/infer_missing_transitive_bound_impl_level_param.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing bound on type parameter
    ╭─[test.lis:9:3]
  8 │ impl<E> W<E> {
  9 │   fn m<T: Bar<E>>(self, x: T) {}
    ·   ───────────────┬──────────────
    ·                  ╰── must satisfy `error`
 10 │ }
    ╰────
  help: `Bar` requires its type argument to satisfy `error`. Add the bound: `E: error` · code: [infer.missing_transitive_bound]
