tests/ui/errors/snapshots/infer_missing_transitive_bound_nested_argument.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing bound on type parameter
   ╭─[test.lis:6:28]
 5 │ 
 6 │ fn foo<T: Outer<Inner<E>>, E>(x: T) {}
   ·                            ┬
   ·                            ╰── must satisfy `Comparable`
   ╰────
  help: `Inner` requires its type argument to satisfy `Comparable`. Add the bound: `E: Comparable` · code: [infer.missing_transitive_bound]
