tests/ui/errors/snapshots/infer_missing_transitive_bound_on_struct.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing bound on type parameter
   ╭─[test.lis:4:23]
 3 │ 
 4 │ struct Foo<T: Bar<E>, E> { value: T }
   ·                       ┬
   ·                       ╰── must satisfy `error`
   ╰────
  help: `Bar` requires its type argument to satisfy `error`. Add the bound: `E: error` · code: [infer.missing_transitive_bound]
