tests/ui/errors/snapshots/infer_missing_transitive_bound_substitutes_referenced_params.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Missing bound on type parameter
   ╭─[test.lis:8:34]
 7 │ 
 8 │ interface Foo<T: Bar<string, E>, E: Parent<int>> {}
   ·                                  ───────┬──────
   ·                                         ╰── must satisfy `Parent<string>`
   ╰────
  help: `Bar` requires its type argument to satisfy `Parent<string>`. Add the bound: `E: Parent<string>` · code: [infer.missing_transitive_bound]
