tests/ui/errors/snapshots/infer_multiple_select_receives.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid select
   ╭─[test.lis:6:9]
 5 │   select {
 6 │     let Some(v) = ch1.receive() => v,
   ·         ───┬───
   ·            ╰── first receive arm
 7 │     let Some(v) = ch2.receive() => v,
   ·         ───┬───
   ·            ╰── second receive arm
 8 │     _ => 0,
   ╰────
  help: Multiple shorthand receive arms can lead to unexpected behavior when a channel closes. Use `match ch.receive() { Some(v) => ..., None => ... }` to handle closes explicitly · code: [infer.multiple_select_receives]
